// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResthookRouterForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="call_resthook"
  title="Call Zapier"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "split_by_resthook",
        ],
        "component": [Function],
        "description": "Call Zapier",
        "filter": "resthook",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "exits",
        ],
        "name": "Call Zapier",
        "type": "call_resthook",
        "visibility": Array [
          "messaging",
          "messaging_background",
          "voice",
        ],
      }
    }
    onChange={[MockFunction]}
  />
  <AssetSelector
    entry={
      Object {
        "value": Object {
          "resthook": "my-resthook",
        },
      }
    }
    name="Resthook"
    nameKey="resthook"
    onChange={[Function]}
    placeholder="Select the resthook to call"
    searchable={true}
    valueKey="resthook"
  />
  <div
    className="result_name"
  >
    <OptionalTextInput
      helpText={
        <Trans
          i18nKey="forms.result_name_help"
          values={
            Object {
              "resultFormat": "@results.result",
            }
          }
        >
          By naming the result, you can reference it later using [[resultFormat]]
        </Trans>
      }
      maxLength={64}
      name="Result Name"
      onChange={[Function]}
      toggleText="Save as.."
      value={
        Object {
          "value": "result",
        }
      }
    />
  </div>
</Dialog>
`;

exports[`ResthookRouterForm updates coverts from other node types 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "result_name": "result",
          "type": "call_resthook",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_only_text",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Success",
            "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          },
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Failure",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
        ],
        "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@results.result.category",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates creates its own action uuid if necessary 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "result_name": "Result",
          "type": "call_resthook",
          "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
        },
        Object {
          "destination_uuid": null,
          "uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "6c22884b-0e35-4206-982e-18320691eda9",
            "type": "has_only_text",
            "uuid": "0c8c9239-9b59-473a-a229-d8a9693be270",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
            "name": "Success",
            "uuid": "6c22884b-0e35-4206-982e-18320691eda9",
          },
          Object {
            "exit_uuid": "e0bc3776-792f-49d2-b4be-48be2cf8159a",
            "name": "Failure",
            "uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
          },
        ],
        "default_category_uuid": "a62e8284-49f8-4292-adbc-d5f6607f85c5",
        "operand": "@results.result.category",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;

exports[`ResthookRouterForm updates should update and save 1`] = `
Object {
  "resthook": Object {
    "validationFailures": Array [],
    "value": Object {
      "name": "new-resthook",
      "resthook": "new-resthook",
      "type": "resthook",
    },
  },
  "resultName": Object {
    "value": "result",
  },
  "valid": true,
}
`;

exports[`ResthookRouterForm updates should update and save 2`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "resthook": "new-resthook",
          "result_name": "result",
          "type": "call_resthook",
          "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
        },
      ],
      "exits": Array [
        Object {
          "destination_uuid": null,
          "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        },
        Object {
          "destination_uuid": null,
          "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "Success",
            ],
            "category_uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
            "type": "has_only_text",
            "uuid": "1e47a1e1-3c67-4df5-adf1-da542c789adb",
          },
        ],
        "categories": Array [
          Object {
            "exit_uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
            "name": "Success",
            "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
          },
          Object {
            "exit_uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
            "name": "Failure",
            "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
          },
        ],
        "default_category_uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "operand": "@results.result.category",
        "type": "switch",
      },
      "uuid": "132de855-4042-4dc1-a18f-cc2e6a8f790a",
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_resthook",
    },
  },
]
`;
